Revise README for improved clarity and structure
Updated README to enhance clarity and organization of project details, including features, technologies, and usage instructions.